--- a/Veem/Payment/composer.json
+++ b/Veem/Payment/composer.json
@@ -2,12 +2,11 @@
   "name": "veem/module-payment",
   "description": "Veem Payment for Magento 2",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
-    "magento/framework": "~100.0.*",
-    "magento/module-sales": "100.0.*",
-    "magento/module-checkout": "100.0.*",
-    "magento/module-payment": "100.0.*",
-    "magento/magento-composer-installer": "100.0.*"
+    "php": "~5.5.*|~5.6.*|~7.0.*|`~7.1.*",
+    "magento/framework": "~100.1.*",
+    "magento/module-sales": "100.1.*",
+    "magento/module-checkout": "100.1.*",
+    "magento/module-payment": "100.1.*"
   },
   "type": "magento2-module",
   "version": "1.0.0",
