--- a/Veem/Payment/composer.json
+++ b/Veem/Payment/composer.json
@@ -2,11 +2,14 @@
   "name": "veem/module-payment",
   "description": "Veem Payment for Magento 2",
   "require": {
-    "php": "~5.5.*|~5.6.*|~7.0.*|`~7.1.*",
+    "php": ">=7.0.*",
     "magento/framework": "~100.1.*",
     "magento/module-sales": "100.1.*",
     "magento/module-checkout": "100.1.*",
-    "magento/module-payment": "100.1.*"
+    "magento/module-payment": "100.1.*",
+    "ext-json": "*",
+    "giggsey/libphonenumber-for-php": "^8.10",
+    "giggsey/locale": "^1.2"
   },
   "type": "magento2-module",
   "version": "1.0.0",
